--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,7 +21,7 @@
   "rules": {
     "react/react-in-jsx-scope": "off",
     "react/prop-types": 0,
-    "prettier/prettier": "error",
+    "prettier/prettier": 0,
     "react/destructuring-assignment": [0],
     "import/prefer-default-export": "off",
     "consistent-return": "off",
